--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@
 </head>
 <body>
     <main>
-        <section>
+        <section class="profile">
             <h1> User profile </h1>
             <img src="" alt="Profile picture" />
             <p>
                 Egon  <br>
                 <button> Take picture </button>
             </p>
+        </section>
+        <section class="video">
+            <button class="start-stream"> Show camera video </button>
+            <button class="stop-stream"> Stop video </button>
+
+            <br>
+            <video src="" autoplay poster="" controls>
+
+            </video>
         </section>
     </main>
 </body>
