--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <img src="" alt="Profile picture" />
             <p>
                 Egon  <br>
-                <button> Take picture </button>
+                <button disabled> Take picture </button>
             </p>
         </section>
         <section class="video">
             <button class="start-stream"> Show camera video </button>
-            <button class="stop-stream"> Stop video </button>
+            <button class="stop-stream" disabled> Stop video </button>
 
-            <br>
+            <p class="message error"> <!-- Plats för felmeddelanden --> </p>
             <video src="" autoplay poster="" controls>
 
             </video>
