Refactoring the script file

--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
             </p>
         </section>
         <section class="video">
-            <button class="start-stream"> Show camera video </button>
-            <button class="stop-stream" disabled> Stop video </button>
+            <div class="">
+                <button class="start-stream"> Show camera video </button>
+                <button class="stop-stream" disabled> Stop video </button>
+            </div>
+            <div class="">
+                <button class="start-recording" disabled> Record video </button>
+                <button class="stop-recording" disabled> Stop recording </button>
+                <a href="" download class="downloadLink hidden"> Download </a>
+            </div>
+
 
             <p class="message error"> <!-- Plats för felmeddelanden --> </p>
             <video src="" autoplay poster="" controls>
