--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
         <section class="profile">
             <h1> User profile </h1>
-            <img src="" alt="Profile picture" />
+            <img src="" alt="Profile picture" class="hidden" />
             <p>
                 Egon  <br>
                 <button disabled> Take picture </button>
